--- a/app/src/main/res/layout-land/activity_principal.xml
+++ b/app/src/main/res/layout-land/activity_principal.xml
@@ -23,13 +23,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="PINCLASSROOM"
-                android:textAlignment="center"
-                />
+                android:textAlignment="center" />
 
 
             <GridLayout
                 android:layout_width="match_parent"
-                android:layout_height="450dp"
+                android:layout_height="550dp"
                 android:layout_marginTop="50dp"
                 android:alignmentMode="alignMargins"
                 android:columnCount="2"
@@ -38,14 +37,17 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/card_view_aulas"
-                    android:layout_width="180dp"
-                    android:layout_height="150dp"
+                    android:layout_width="320dp"
+                    android:layout_height="200dp"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentBottom="true"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp">
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:clickable="true">
+
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -67,15 +69,16 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/card_view_docentes"
-                    android:layout_width="180dp"
-                    android:layout_height="150dp"
+                    android:layout_width="320dp"
+                    android:layout_height="200dp"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="20dp">
+                    android:layout_marginBottom="20dp"
+                    android:clickable="true">
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -88,17 +91,20 @@
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="20dp"
                         android:layout_marginBottom="20dp"
-                        app:srcCompat="@drawable/ic_docentes"/>
+                        app:srcCompat="@drawable/ic_docentes" />
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/card_view_eventos"
-                    android:layout_width="180dp"
-                    android:layout_height="150dp"
+                    android:layout_width="320dp"
+                    android:layout_height="200dp"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginStart="20dp"
-                    android:layout_marginTop="20dp">
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:clickable="true">
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -111,18 +117,20 @@
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="20dp"
                         android:layout_marginBottom="20dp"
-                        app:srcCompat="@drawable/ic_eventos"/>
+                        app:srcCompat="@drawable/ic_eventos" />
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/card_view_config"
-                    android:layout_width="180dp"
-                    android:layout_height="150dp"
+                    android:layout_width="320dp"
+                    android:layout_height="200dp"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="20dp"
-                    android:layout_marginEnd="20dp">
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:clickable="true">
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -135,7 +143,7 @@
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="20dp"
                         android:layout_marginBottom="20dp"
-                        app:srcCompat="@drawable/ic_config"/>
+                        app:srcCompat="@drawable/ic_config" />
                 </androidx.cardview.widget.CardView>
 
             </GridLayout>
