--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    //cambia color a las letras-hint de las cajas de texto
+    <style name="Hint" parent="TextAppearance.Design.Hint">
+        <item name="android:textColor">#FF0000</item>
+    </style>
+
 </resources>
