--- a/app/src/main/res/layout-land/activity_principal.xml
+++ b/app/src/main/res/layout-land/activity_principal.xml
@@ -7,29 +7,60 @@
     android:layout_height="match_parent"
     tools:context=".PrincipalActivity">
 
-    <include layout="@layout/action_bar_layout" />
+    <!--<include layout="@layout/action_bar_layout" />-->
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="55dp">
+        android:layout_marginTop="0dp">
 
         <RelativeLayout
             android:id="@+id/inicio"
             android:layout_width="match_parent"
             android:layout_height="100dp">
 
+            <ImageView
+                android:id="@+id/txtTrans2"
+                android:layout_width="200dp"
+                android:layout_height="65dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="30dp"
+                app:srcCompat="@drawable/logocompleto" />
+
             <TextView
+                android:id="@+id/msjUno"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="PINCLASSROOM"
-                android:textAlignment="center" />
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="100dp"
+                android:layout_marginEnd="15dp"
+                android:text="No te pierdas más."
+                android:textAlignment="center"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/msjDos"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/txtTrans2"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="30dp"
+                android:text="Conoce facilmente tu universidad con PinClassroom"
+                android:textAlignment="center"
+                android:textSize="18dp" />
 
 
             <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="550dp"
-                android:layout_marginTop="50dp"
+                android:layout_below="@+id/msjDos"
+                android:layout_marginTop="10dp"
                 android:alignmentMode="alignMargins"
                 android:columnCount="2"
                 android:columnOrderPreserved="false"
