--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -5,19 +5,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="0dp"
     tools:context=".PrincipalActivity">
 
     <!--<include layout="@layout/action_bar_layout" />-->
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="0dp">
 
         <RelativeLayout
             android:id="@+id/inicio"
             android:layout_width="match_parent"
-            android:layout_height="100dp">
+            android:layout_height="200dp">
 
             <ImageView
                 android:id="@+id/txtTrans2"
@@ -57,9 +58,12 @@
 
 
             <GridLayout
-                android:layout_width="match_parent"
-                android:layout_height="450dp"
+                android:id="@+id/grid_pricipal"
+                android:layout_width="wrap_content"
+                android:layout_height="400dp"
                 android:layout_below="@+id/msjDos"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
                 android:layout_marginTop="10dp"
                 android:alignmentMode="alignMargins"
                 android:columnCount="2"
@@ -68,7 +72,7 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/card_view_aulas"
-                    android:layout_width="180dp"
+                    android:layout_width="165dp"
                     android:layout_height="150dp"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
@@ -92,13 +96,13 @@
                             android:layout_marginTop="20dp"
                             android:layout_marginEnd="20dp"
                             android:layout_marginBottom="20dp"
-                            app:srcCompat="@drawable/ic_salones" />
+                            app:srcCompat="@drawable/aula" />
                     </RelativeLayout>
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/card_view_docentes"
-                    android:layout_width="180dp"
+                    android:layout_width="165dp"
                     android:layout_height="150dp"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true"
@@ -119,12 +123,12 @@
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="20dp"
                         android:layout_marginBottom="20dp"
-                        app:srcCompat="@drawable/ic_docentes" />
+                        app:srcCompat="@drawable/docentes" />
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/card_view_eventos"
-                    android:layout_width="180dp"
+                    android:layout_width="165dp"
                     android:layout_height="150dp"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
@@ -142,12 +146,12 @@
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="20dp"
                         android:layout_marginBottom="20dp"
-                        app:srcCompat="@drawable/ic_eventos" />
+                        app:srcCompat="@drawable/eventos" />
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/card_view_config"
-                    android:layout_width="180dp"
+                    android:layout_width="165dp"
                     android:layout_height="150dp"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true"
@@ -166,10 +170,27 @@
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="20dp"
                         android:layout_marginBottom="20dp"
-                        app:srcCompat="@drawable/ic_config" />
+                        app:srcCompat="@drawable/configuracione" />
                 </androidx.cardview.widget.CardView>
-
             </GridLayout>
+
+            <ImageView
+                android:id="@+id/log_out"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_below="@+id/grid_pricipal"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="0dp"
+                android:onClick="on_click_log_out"
+                app:srcCompat="@drawable/ic_off"/>
+            <TextView
+                android:layout_below="@+id/log_out"
+                android:layout_height="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"/>
         </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
