--- a/app/src/main/res/layout/activity_aulas.xml
+++ b/app/src/main/res/layout/activity_aulas.xml
@@ -32,13 +32,19 @@
                     android:id="@+id/tab_aula"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:padding="12dp"
+                    android:paddingBottom="16dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingTop="16dp">
 
                     <TextView
-                        android:id="@+id/textView"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Aulas listado" />
+                        android:layout_height="match_parent"
+                        android:text="AULAS"
+                        android:textSize="40dp"
+                        android:gravity="center"/>
 
                 </LinearLayout>
 
@@ -49,10 +55,11 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/textView2"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Mapa" />
+                        android:layout_height="match_parent"
+                        android:text="MAPA"
+                        android:textSize="40dp"
+                        android:gravity="center"/>
                 </LinearLayout>
             </FrameLayout>
         </LinearLayout>
