--- a/app/src/main/res/layout/activity_ayuda_mejorar.xml
+++ b/app/src/main/res/layout/activity_ayuda_mejorar.xml
@@ -128,13 +128,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:layout_marginEnd="40dp"
+            android:layout_marginStart="40dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Mensaje: "
-                android:textSize="20dp" />
+                android:text="Mensaje"
+                android:textSize="20dp"
+                android:layout_gravity="center"/>
 
             <EditText
                 android:id="@+id/et_text"
