--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -54,6 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:onClick="IrEnviarPerfil"
         android:clickable="true"
         android:orientation="horizontal">
 
@@ -90,6 +91,7 @@
                 android:layout_marginBottom="15dp"
                 android:text="Gestiona tu información personal."
                 android:textColor="@color/colorSecondaryText" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -173,6 +175,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:clickable="true"
+        android:onClick="IrEnviarAcercaDe"
         android:orientation="horizontal">
 
         <ImageView
